--- a/Klike/Sources/Controllers/KLTutorialPageViewController.xib
+++ b/Klike/Sources/Controllers/KLTutorialPageViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLTutorialPageViewController">
@@ -56,7 +56,7 @@
                 <constraint firstItem="3ML-Ma-jW9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="hsn-us-DCL"/>
                 <constraint firstItem="Xv9-Jb-Mtf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="q2C-Xx-3If"/>
             </constraints>
-            <point key="canvasLocation" x="82" y="539"/>
+            <point key="canvasLocation" x="114" y="517"/>
         </view>
     </objects>
 </document>
