--- a/Klike/Sources/Controllers/KLInviteFriendsViewController.xib
+++ b/Klike/Sources/Controllers/KLInviteFriendsViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
@@ -81,13 +81,6 @@
                         <action selector="onConnectFacebook:" destination="-1" eventType="touchUpInside" id="5l6-Yo-vHo"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oml-kS-gdB" userLabel="separator first">
-                    <rect key="frame" x="0.0" y="408" width="600" height="1"/>
-                    <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="sME-Y7-ExS"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C27-i4-gn5" userLabel="separator second">
                     <rect key="frame" x="0.0" y="471" width="600" height="1"/>
                     <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -115,16 +108,13 @@
                 <constraint firstAttribute="trailing" secondItem="BwK-u5-zmd" secondAttribute="trailing" id="L1g-O3-agM"/>
                 <constraint firstAttribute="trailing" secondItem="pwV-e1-ZVT" secondAttribute="trailing" id="PoB-Xt-1bw"/>
                 <constraint firstItem="owj-0v-JMz" firstAttribute="top" secondItem="BwK-u5-zmd" secondAttribute="bottom" id="RKv-Al-mnj"/>
-                <constraint firstItem="Oml-kS-gdB" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="SNu-Pb-rSX"/>
                 <constraint firstItem="owj-0v-JMz" firstAttribute="leading" secondItem="TiR-BO-xok" secondAttribute="leading" id="VfF-mh-Cks"/>
                 <constraint firstItem="owj-0v-JMz" firstAttribute="top" secondItem="C27-i4-gn5" secondAttribute="bottom" id="XHt-tH-GRX"/>
                 <constraint firstItem="BwK-u5-zmd" firstAttribute="top" secondItem="Neh-uW-bXD" secondAttribute="bottom" id="Xch-Pn-RHo"/>
                 <constraint firstAttribute="trailing" secondItem="Neh-uW-bXD" secondAttribute="trailing" id="a9C-kO-c5j"/>
-                <constraint firstItem="Oml-kS-gdB" firstAttribute="top" secondItem="BwK-u5-zmd" secondAttribute="top" id="gSN-8r-vG6"/>
                 <constraint firstItem="pwV-e1-ZVT" firstAttribute="top" secondItem="c5H-Cv-oL8" secondAttribute="top" id="hCL-ZO-5uV"/>
                 <constraint firstItem="pwV-e1-ZVT" firstAttribute="width" secondItem="c5H-Cv-oL8" secondAttribute="width" id="hIB-ce-pip"/>
                 <constraint firstAttribute="trailing" secondItem="owj-0v-JMz" secondAttribute="trailing" id="ru2-UX-ARf"/>
-                <constraint firstAttribute="trailing" secondItem="Oml-kS-gdB" secondAttribute="trailing" id="saT-K9-Bha"/>
             </constraints>
             <point key="canvasLocation" x="1179" y="490"/>
         </view>
